updated icon n ui

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -4,11 +4,11 @@
 	  <a href="http://github.com/{{ site.github }}"><i class="fa fa-github"></i></a>
     {% endif %}
     {% if site.email %}
-	  <a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a>
+	  <!--<a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a>--> 
     {% endif %}
 
     {% if site.twitter %}
-	  <a href="http://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i></a>
+	  <!--<a href="http://twitter.com/{{ site.twitter }}"><i class="fa fa-twitter"></i></a>--> 
     {% endif %}
     {% if site.linkedin %}
 	  <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
@@ -28,9 +28,7 @@
 	</h4>
 </div>
 <div>
-    <textarea id="textbox">
-        Here's my PGP: 
-        (You can also refer to my DNS records to verify accuracy, it's a TXT record)
-        Here's My Email: {{ site.email }}
-    </textarea>
+    <textarea id="textbox">Here's my PGP: 
+(You can also refer to my DNS records to verify accuracy, it's a TXT record)
+Here's My Email: {{ site.email }}</textarea>
 </div>
