--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,11 @@
 <footer>
     <div id="footer">
         <div class="container">
-            <p class="text-muted">© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
-            <a href="http://www.github.com/jekyller/sustain">sustain</a> with ♥</p>
+            <p class="text-muted">
+            <a href="{{ site.github.repository_url }}">Mod</a> with ♥ in SGP &copy; {{ site.time | date: '%Y' }}</p>
         </div>
     </div>
 </footer>
 <div class="footer"></div>
+
+
