--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="{{ site.author }}" />
     <meta name="description" content="{{ site.description }}">
-    <link rel="favicon" href="{{ site.baseurl }}static/img/favicon.ico">
+    <link rel="favicon" href="{{ site.url }}/static/img/favicon.ico">
     <meta name="theme-color" content="#FFF"/>
 
     {% if page.title %}
@@ -16,7 +16,7 @@
     {% endif %}
 
     <!-- Bootstrap -->
-    <link href="{{ site.baseurl }}static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.url }}/static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,15 +26,15 @@
     <![endif]-->
 
 	<!-- Custom styles for this template -->
-    <link  rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/main.css"/>
+    <link  rel="stylesheet" type="text/css" href="{{ site.url }}/static/css/main.css"/>
 	<!-- https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,200bold,400old -->
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/googleFont.css" async/>
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/css/googleFont.css" async/>
 
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" async/>
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}static/css/syntax.css" async/>
+    
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/css/syntax.css" async/>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{{ site.baseurl }}static/js/jquery.min.js" ></script>
+    <script src="{{ site.url }}/static/js/jquery.min.js" ></script>
 
     <!-- Google Analytics -->
     {% include analytics.html %}
@@ -54,12 +54,12 @@
 
     
     <!-- Bootstrap core JavaScript -->
-    <script src="{{ site.baseurl }}static/js/bootstrap.min.js" async></script>
+    <script src="{{ site.url }}/static/js/bootstrap.min.js" async></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{{ site.baseurl }}static/js/docs.min.js" async></script>
-    <script src="{{ site.baseurl }}static/js/main.js" async></script>
+    <script src="{{ site.url }}/static/js/docs.min.js" async></script>
+    <script src="{{ site.url }}/static/js/main.js" async></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{ site.baseurl }}static/js/ie10-viewport-bug-workaround.js" async></script>
+    <script src="{{ site.url }}/static/js/ie10-viewport-bug-workaround.js" async></script>
 
    </body>
 </html>
