--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button> 
-      <a class="navbar-brand" href="{{ site.baseurl }}"><i class="fa fa-home"></i></a>
+      <a class="navbar-brand" href="{{ site.url }}">
+        <img class="home" src="{{ site.url }}/static/icons/home.svg" alt="Home"/>
+      </a>
     </div>
 
      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
