--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -43,3 +43,5 @@
   </div>
 </div>
 </section>
+
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" async/>
