--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -30,11 +30,7 @@
 	<!-- https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,200bold,400old -->
     <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/css/googleFont.css" async/>
 
-    
     <link rel="stylesheet" type="text/css" href="{{ site.url }}/static/css/syntax.css" async/>
-
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{{ site.url }}/static/js/jquery.min.js" ></script>
 
     <!-- Google Analytics -->
     {% include analytics.html %}
@@ -52,7 +48,8 @@
     <!-- Footer -->
     {% include footer.html %}
 
-    
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{{ site.url }}/static/js/jquery.min.js" async></script>
     <!-- Bootstrap core JavaScript -->
     <script src="{{ site.url }}/static/js/bootstrap.min.js" async></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
