--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -49,7 +49,7 @@
     {% include footer.html %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{{ site.url }}/static/js/jquery.min.js" async></script>
+    <script src="{{ site.url }}/static/js/jquery.min.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script src="{{ site.url }}/static/js/bootstrap.min.js" async></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
