--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -45,3 +45,12 @@
 </section>
 
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" async/>
+<script>
+
+var elements = document.querySelectorAll("li.dropdown .navbar-right li a");
+Array.prototype.forEach.call(elements, function(element){
+	if(element.text == "Projects"){
+		element.setAttribute("id", "NavbarCurrent");
+	}
+});
+</script>
