--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -57,6 +57,6 @@
     <script src="{{ site.url }}/static/js/main.js" async></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="{{ site.url }}/static/js/ie10-viewport-bug-workaround.js" async></script>
-
+    <script src="{{ site.url }}/static/js/pingCheck.js" async></script>
    </body>
 </html>
