--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -54,9 +54,42 @@
     <script src="{{ site.url }}/static/js/bootstrap.min.js" async></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ site.url }}/static/js/docs.min.js" async></script>
-    <script src="{{ site.url }}/static/js/main.js" async></script>
+    <!--<script src="{{ site.url }}/static/js/main.js" async></script>-->
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{{ site.url }}/static/js/ie10-viewport-bug-workaround.js" async></script>
+    <!--<script src="{{ site.url }}/static/js/ie10-viewport-bug-workaround.js" async></script>-->
+    <script type="text/javascript">
+      <!-- /static/js/ie10-viewport-bug-workaround.js -->
+
+      (function () {
+        'use strict';
+        if (navigator.userAgent.match(/IEMobile\/10\.0/)) {
+            var msViewportStyle = document.createElement('style')
+            msViewportStyle.appendChild(
+                document.createTextNode(
+                    '@-ms-viewport{width:auto!important}'
+                )
+            )
+            document.querySelector('head').appendChild(msViewportStyle)
+        }
+        })();
+
+
+      <!-- /static/js/main.js -->
+
+        // jQuery for page scrolling feature
+        jQuery(document).ready(function(e) {
+            e(".scroll").click(function(t) {
+                t.preventDefault();
+                e("html,body").animate({
+                    scrollTop: e(this.hash).offset().top
+                }, 1e3)
+            })
+        });
+    </script>
     <script src="{{ site.url }}/static/js/pingCheck.js" async></script>
+
+      
+
+
    </body>
 </html>
